--- a/css/styles.css
+++ b/css/styles.css
@@ -3,24 +3,10 @@ body {
   padding: 0;
   font-family: "Roboto", sans-serif;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 30px;
   color: #163152;
   background-color: #fdfdff;
   width: 100%;
-}
-
-.clearfix {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* header */
-
-.page-header {
-  height: 550px;
-  background: url("../img/wheat-back.jpg") no-repeat;
-  background-size: 100%;
 }
 
 .container {
@@ -29,42 +15,91 @@ body {
   margin-right: auto;
 }
 
-.header-top {
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* header */
+
+.page-header {
+  height: 490px;
+  background-color: #7a5118;
+  background-image: url("../img/wheat-back.jpg");
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: cover;
   padding-top: 60px;
-  padding-bottom: 100px;
+}
+
+.header-top {
+  margin-bottom: 120px;
+}
+
+.header-logo {
+  float: left;
+  margin-right: 60px;
 }
 
 img.logo {
-  float: left;
-  margin-right: 50px;
   height: 76px;
   width: 140px;
 }
 
 .main-nav{
   float: right;
-  width: auto;
-  border-top: 1px solid rgba(255, 255, 255, 0.3);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  width: 600px;
   margin-top: 10px;
 }
 
-.nav-menu ul {
-  height: 76px;
+.nav-menu {
   padding: 0;
   margin: 0;
-  list-style-type: none;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
-ul.nav-menu li {
+.nav-menu li {
+  padding-left: 0;
+  margin: 0;
   display: inline-block;
-  margin-right: 30px;
+  list-style-type: none;
+  margin-right: 50px;
   text-transform: uppercase;
-  text-justify: left;
 }
 
-ul.nav-menu li:last-child {
+.nav-menu li:last-child {
   margin-right: 0;
+}
+
+.nav-menu a {
+  position: relative;
+  display: inline-block;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  padding-top: 14px;
+  padding-bottom: 13px;
+}
+
+.nav-menu a:hover {
+  color: rgb(240, 203, 82);
+}
+
+.nav-menu a:hover::after {
+  content: "";
+  position: absolute;
+  bottom: -1px;
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: rgba(255, 255, 255, 1);
+}
+
+.nav-menu a:active {
+  color: rgba(240, 203, 82, 0.3);
+  border-bottom: 2px solid rgb(255, 255, 255);
 }
 
 h1 {
