--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,20 @@ body {
   clear: both;
 }
 
+h1 {
+  color: white;
+  font-size: 64px;
+  line-height: 70px;
+  text-align: center;
+}
+
+h3 {
+  color: black;
+  font-size: 20px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
 /* header */
 
 .page-header {
@@ -102,9 +116,73 @@ img.logo {
   border-bottom: 2px solid rgb(255, 255, 255);
 }
 
-h1 {
-  color: white;
-  font-size: 64px;
-  line-height: 70px;
-  text-align: center;
+
+/* features */
+
+.container-wide {
+  width: 1020px;
+}
+
+.features {
+  background-color: #ffcb78;
+  padding-top: 80px;
+  padding-bottom: 50px;
+}
+
+.features-list {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.features-list li {
+  display: inline-block;
+  position: relative;
+  margin: 0;
+  width: 210px;
+  border-right: 1px solid #e5b66c;
+  padding-left: 95px;
+  padding-right: 95px;
+  padding-top: 80px;
+  vertical-align: top;
+}
+
+.features-list li.cook {
+  padding-left: 0;
+}
+
+.features-list li.hq {
+  border-right: none;
+  padding-right: 0;
+}
+
+.features-list li.cook::after {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 68px;
+  left: 0;
+  top: 0;
+  background: url("../img/icon-brew.png") no-repeat;
+}
+
+.features-list li.self-made::after {
+  content: "";
+  position: absolute;
+  width: 46px;
+  height: 65px;
+  left: 95px;
+  top: 0;
+  background: url("../img/icon-matreshka.png") no-repeat;
+}
+
+.features-list li.hq::after {
+  content: "";
+  position: absolute;
+  width: 63px;
+  height: 58px;
+  left: 95px;
+  top: 0;
+  background: url("../img/icon-thumbsup.png") no-repeat;
 }
