Оформил раздел "АССОРТИМЕНТ" в CSS

--- a/css/styles.css
+++ b/css/styles.css
@@ -454,6 +454,58 @@ img.logo {
   padding-bottom: 90px;
 }
 
-.pricelist-table tr {
+.pricelist-table {
+  margin-top: 75px;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.pricelist-table td,
+.pricelist-table th {
   border-bottom: 1px solid #e5e5e5;
+  text-align: left;
+}
+
+.pricelist-table td {
+padding-top: 17px;
+padding-bottom: 17px;
+}
+
+.pricelist-table th {
+  padding-bottom: 30px;
+  padding-left: 1px;
+  padding-top: 1px;
+  padding-right: 1px;
+  font-weight: normal;
+  font-size: 11px;
+  text-align: left;
+  color: #999999;
+  text-transform: uppercase;
+}
+
+.first-column {
+  width: 400px;
+}
+
+td.first-column {
+  font-weight: bold;
+  color: #000000;
+  text-transform: uppercase;
+}
+
+td.first-column span {
+  color: white;
+  text-transform: uppercase;
+  font-size: 8px;
+  line-height: 30px;
+  background-color: black;
+  padding: 2px 5px;
+  border-radius: 2px;
+  margin-left: 20px;
+  vertical-align: super;
+}
+
+.pricelist-table td.last-column,
+.pricelist-table th.last-column {
+  text-align: right;
 }
