--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/** Home page style v1 **/
+
 body {
   margin: 0;
   padding: 0;
@@ -26,10 +28,10 @@ body {
 }
 
 h1 {
-  color: white;
-  font-size: 64px;
+  font-size: 70px;
   line-height: 70px;
   text-align: center;
+  color: #ffffff;
 }
 
 h3 {
@@ -746,3 +748,88 @@ a.Vkontakte  {
 .developer a:active {
   color: #6969699d;
 }
+
+/** Home page style v2 **/
+
+body.body2 {
+  margin: 0;
+  padding: 0;
+  font-family: "Arial", sans-serif;
+  color: #404040;
+  font-size: 16px;
+  line-height: 30px;
+  background-color: white;
+  width: 100%;
+}
+
+/* header */
+
+.page-header2 {
+  padding-top: 60px;
+  background-image: url("../img/wheat-back.jpg");
+  background-repeat: no-repeat;
+  background-color: #7a5118;
+  height: 490px;
+  background-size: cover;
+  background-position: bottom;
+}
+
+.main-nav2 {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 120px;
+}
+
+.logo2 {
+  width: 140px;
+  height: 76px;
+}
+
+.nav-menu2 {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  align-self: center;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.nav-menu2 li {
+  display: block;
+  position: relative;
+  margin-right: 50px;
+  margin-top: 14px;
+  margin-bottom: 13px;
+}
+
+.nav-menu2 li:last-child {
+  margin-right: 0;
+}
+
+.nav-menu2 li:hover:after {
+  content: "";
+  position: absolute;
+  bottom: -14px;
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: rgba(255, 255, 255, 1);
+}
+
+.nav-menu2 a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: white;
+  font-weight: bold;
+}
+
+.nav-menu2 a:hover {
+  color: #ffcb78;
+}
+
+.nav-menu2 a:active {
+  color: rgba(255, 203, 120, 0.3);
+}
+
